--- a/example/build.gradle
+++ b/example/build.gradle
@@ -17,46 +17,46 @@
 apply plugin: 'android'
 
 android {
-    compileSdkVersion 19
-    buildToolsVersion "19.0.1"
+  compileSdkVersion 19
+  buildToolsVersion '19.0.3'
 
-    defaultConfig {
-        minSdkVersion 8
-        targetSdkVersion 19
-        versionCode 1
-        versionName "1.0"
+  defaultConfig {
+    minSdkVersion 8
+    targetSdkVersion 19
+    versionCode 1
+    versionName "1.0"
+  }
+  lintOptions {
+    abortOnError false
+  }
+  signingConfigs {
+    debug
+  }
+  buildTypes {
+    release {
+      signingConfig signingConfigs.debug
     }
-    lintOptions {
-        abortOnError false
-    }
-    signingConfigs {
-        release
-    }
-    buildTypes {
-        release {
-            signingConfig signingConfigs.debug
-        }
-    }
+  }
 }
 
 if (project.hasProperty('keyalias')) {
-    android.signingConfigs.release.keyAlias = keyalias
-    android.buildTypes.release.signingConfig = android.signingConfigs.release
+  android.signingConfigs.release.keyAlias = keyalias
+  android.buildTypes.release.signingConfig = android.signingConfigs.release
 }
 
 if (project.hasProperty('keystore')) {
-    android.signingConfigs.release.storeFile = file(keystore)
+  android.signingConfigs.release.storeFile = file(keystore)
 }
 
 if (project.hasProperty('keyaliaspassword')) {
-    android.signingConfigs.release.keyPassword = keyaliaspassword
+  android.signingConfigs.release.keyPassword = keyaliaspassword
 }
 
 if (project.hasProperty('keystorepassword')) {
-    android.signingConfigs.release.storePassword = keystorepassword
+  android.signingConfigs.release.storePassword = keystorepassword
 }
 
 dependencies {
-    compile 'com.android.support:appcompat-v7:+'
-    compile project(':library')
+  compile project(':library')
+  compile 'com.android.support:appcompat-v7:19.+'
 }
